clearing the cache requires write permission

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
   Collect:
     needs: Tests
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
     - name: Clear cache
       uses: actions/github-script@v6
