--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,27 +52,26 @@ jobs:
         path: .test_durations
         key: test_durations-${{ matrix.os }}-${{ matrix.python }}-${{ matrix.job }}-${{ github.run_id }}
         restore-keys: test_durations-0-
-    - name: Venv
-      if: steps.venv-cache.outputs.cache-hit != 'true' && matrix.os != 'windows-latest'
-      run: |
-        python3 -m venv .env
-    - name: Venv Windows
-      if: steps.venv-cache.outputs.cache-hit != 'true' && matrix.os == 'windows-latest'
-      run: |
-        py -m venv .env
     - name: Setup
       if: steps.venv-cache.outputs.cache-hit != 'true'
       run: |
-        echo $OSTYPE
-        echo $OSTYPE
-        echo $OSTYPE
-        source .env/bin/activate
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+            py -m venv .env
+            .env\Scripts\activate.bat
+        else
+            python3 -m venv .env
+            source .env/bin/activate
+        fi
         make install
         make install-test
         make install-training
     - name: Unit tests
       run: |
-        source .env/bin/activate
+        if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
+            .env\Scripts\activate.bat
+        else
+            source .env/bin/activate
+        fi
         python -m pytest \
           -x -s -v \
           --splitting-algorithm least_duration \
