--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
   Tests:
     strategy:
       matrix:
-        os: [ windows-latest ]
-        python: [ 3.8 ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python: [ 3.8, 3.9 ]
         job_num: [ 4 ]
         job: [ 1, 2, 3, 4 ]
     runs-on: ${{ matrix.os }}
