--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,17 @@ on:
     - '.gitignore'
     - 'docs/**'
   workflow_dispatch:
+    inputs:
+      manual_reference_commit:
+        required: false
+        type: string
+      manual_testing_commit:
+        required: false
+        type: string
+
+env:
+  REFERENCE_GIT_COMMIT: 9d31b2ec4df6d8228f370ff20c8267ec6ba39383 # v2.7.0 + pretrained_hf param
+  IS_GH_RUNNER: 1
 
 jobs:
   Tests:
@@ -32,6 +43,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
     - name: Set up Python ${{ matrix.python }}
       uses: actions/setup-python@v4
       with:
@@ -42,12 +55,6 @@ jobs:
       with:
         path: .env
         key: venv-${{ matrix.os }}-${{ matrix.python }}-${{ hashFiles('requirements*') }}
-    - name: Pytest durations
-      uses: actions/cache@v3
-      with:
-        path: .test_durations
-        key: test_durations-${{ matrix.os }}-${{ matrix.python }}-${{ matrix.job }}-${{ github.run_id }}
-        restore-keys: test_durations-0-
     - name: Setup
       if: steps.venv-cache.outputs.cache-hit != 'true'
       run: |
@@ -56,6 +63,40 @@ jobs:
         make install
         make install-test
         make install-training
+    - name: Prepare test data
+      run: |
+        source .env/bin/activate
+        cp tests/util_test.py tests/util_test_ref.py # TODO: remove line once new util_test is in a release
+        if [ -n "${{ inputs.manual_target_commit }}" ]; then
+          git checkout ${{ inputs.manual_target_commit }}
+        fi
+        CURRENT_GIT_REF=`git rev-parse HEAD`
+        if [ -n "${{ inputs.manual_testing_commit }}" ]; then
+          REFERENCE_GIT_COMMIT=${{ inputs.manual_testing_commit }}
+        fi
+        git checkout $REFERENCE_GIT_COMMIT
+        mkdir -p tests/data
+        rm -rf tests/data/*
+        python -m pytest \
+          --quiet --co \
+          --splitting-algorithm least_duration \
+          --splits ${{ matrix.job_num }} \
+          --group ${{ matrix.job }} \
+          tests \
+          | head -n -2 | grep -Po 'test_inference_with_data\[\K[^]]*(?=])' \
+          > tests/data/models_gh_runner.txt
+        python tests/util_test_ref.py --model_file $PWD/tests/data/models_gh_runner.txt
+        mkdir -p tests/data_ref
+        cp -r tests/data/* tests/data_ref
+        git reset --hard $CURRENT_GIT_REF
+        rm -rf tests/data/*
+        cp -r tests/data_ref/* tests/data
+    - name: Pytest durations cache
+      uses: actions/cache@v3
+      with:
+        path: .test_durations
+        key: test_durations-${{ matrix.os }}-${{ matrix.python }}-${{ matrix.job }}-${{ github.run_id }}
+        restore-keys: test_durations-0-
     - name: Unit tests
       run: |
         source .env/bin/activate
