--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,15 +66,6 @@ jobs:
     - name: Prepare test data
       run: |
         source .env/bin/activate
-        cp tests/util_test.py tests/util_test_ref.py # TODO: remove line once new util_test is in a release
-        if [ -n "${{ inputs.manual_target_commit }}" ]; then
-          git checkout ${{ inputs.manual_target_commit }}
-        fi
-        CURRENT_GIT_REF=`git rev-parse HEAD`
-        if [ -n "${{ inputs.manual_testing_commit }}" ]; then
-          REFERENCE_GIT_COMMIT=${{ inputs.manual_testing_commit }}
-        fi
-        git checkout $REFERENCE_GIT_COMMIT
         mkdir -p tests/data
         rm -rf tests/data/*
         python -m pytest \
@@ -85,6 +76,15 @@ jobs:
           tests \
           | head -n -2 | grep -Po 'test_inference_with_data\[\K[^]]*(?=])' \
           > tests/data/models_gh_runner.txt
+        cp tests/util_test.py tests/util_test_ref.py # TODO: remove line once new util_test is in a release
+        CURRENT_GIT_REF=`git rev-parse HEAD`
+        if [ -n "${{ inputs.manual_target_commit }}" ]; then
+          CURRENT_GIT_REF=${{ inputs.manual_target_commit }}
+        fi
+        if [ -n "${{ inputs.manual_testing_commit }}" ]; then
+          REFERENCE_GIT_COMMIT=${{ inputs.manual_testing_commit }}
+        fi
+        git checkout $REFERENCE_GIT_COMMIT
         python tests/util_test_ref.py --model_file $PWD/tests/data/models_gh_runner.txt
         mkdir -p tests/data_ref
         cp -r tests/data/* tests/data_ref
