--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,17 +66,19 @@ jobs:
     - name: Prepare test data
       run: |
         source .env/bin/activate
+        echo "clearning up"
         mkdir -p tests/data
         rm -rf tests/data/*
+        echo "collecting model names"
         python -m pytest \
-          --quiet --co \
+          --co \
           --splitting-algorithm least_duration \
           --splits ${{ matrix.job_num }} \
           --group ${{ matrix.job }} \
-          tests \
-          | head -n -2 | grep -Po 'test_inference_with_data\[\K[^]]*(?=])' \
-          > tests/data/models_gh_runner.txt
+          tests
+        cat tests/data/models_gh_runner.txt
         cp tests/util_test.py tests/util_test_ref.py # TODO: remove line once new util_test is in a release
+        echo "checking out"
         CURRENT_GIT_REF=`git rev-parse HEAD`
         if [ -n "${{ inputs.manual_target_commit }}" ]; then
           CURRENT_GIT_REF=${{ inputs.manual_target_commit }}
@@ -85,10 +87,15 @@ jobs:
           REFERENCE_GIT_COMMIT=${{ inputs.manual_testing_commit }}
         fi
         git checkout $REFERENCE_GIT_COMMIT
+        echo "creating test data"
         python tests/util_test_ref.py --model_file $PWD/tests/data/models_gh_runner.txt
+        echo "cleaning up post"
         mkdir -p tests/data_ref
+        echo "copy test data"
         cp -r tests/data/* tests/data_ref
+        echo "checking out head"
         git reset --hard $CURRENT_GIT_REF
+        echo "copying test data back"
         rm -rf tests/data/*
         cp -r tests/data_ref/* tests/data
     - name: Pytest durations cache
