--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,6 @@ on:
 
 env:
   REFERENCE_GIT_COMMIT: 9d31b2ec4df6d8228f370ff20c8267ec6ba39383 # v2.7.0 + pretrained_hf param
-  IS_GH_RUNNER: 1
 
 jobs:
   Tests:
@@ -66,19 +65,7 @@ jobs:
     - name: Prepare test data
       run: |
         source .env/bin/activate
-        echo "clearning up"
-        mkdir -p tests/data
-        rm -rf tests/data/*
-        echo "collecting model names"
-        python -m pytest \
-          --co \
-          --splitting-algorithm least_duration \
-          --splits ${{ matrix.job_num }} \
-          --group ${{ matrix.job }} \
-          tests
-        cat tests/data/models_gh_runner.txt
         cp tests/util_test.py tests/util_test_ref.py # TODO: remove line once new util_test is in a release
-        echo "checking out"
         CURRENT_GIT_REF=`git rev-parse HEAD`
         if [ -n "${{ inputs.manual_target_commit }}" ]; then
           CURRENT_GIT_REF=${{ inputs.manual_target_commit }}
@@ -87,15 +74,20 @@ jobs:
           REFERENCE_GIT_COMMIT=${{ inputs.manual_testing_commit }}
         fi
         git checkout $REFERENCE_GIT_COMMIT
-        echo "creating test data"
+        mkdir -p tests/data
+        rm -rf tests/data/*
+        python -m pytest \
+          --quiet --co \
+          --splitting-algorithm least_duration \
+          --splits ${{ matrix.job_num }} \
+          --group ${{ matrix.job }} \
+          tests \
+          | head -n -2 | grep -Po 'test_inference_with_data\[\K[^]]*(?=])' \
+          > tests/data/models_gh_runner.txt
         python tests/util_test_ref.py --model_file $PWD/tests/data/models_gh_runner.txt
-        echo "cleaning up post"
         mkdir -p tests/data_ref
-        echo "copy test data"
         cp -r tests/data/* tests/data_ref
-        echo "checking out head"
         git reset --hard $CURRENT_GIT_REF
-        echo "copying test data back"
         rm -rf tests/data/*
         cp -r tests/data_ref/* tests/data
     - name: Pytest durations cache
@@ -107,7 +99,7 @@ jobs:
     - name: Unit tests
       run: |
         source .env/bin/activate
-        python -m pytest \
+        IS_GH_RUNNER=1 python -m pytest \
           -x -s -v \
           --splitting-algorithm least_duration \
           --splits ${{ matrix.job_num }} \
