--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,15 +21,15 @@ on:
     - 'docs/**'
   workflow_dispatch:
     inputs:
-      manual_reference_commit:
+      manual_revision_reference:
         required: false
         type: string
-      manual_testing_commit:
+      manual_revision_test:
         required: false
         type: string
 
 env:
-  REFERENCE_GIT_COMMIT: 9d31b2ec4df6d8228f370ff20c8267ec6ba39383 # v2.7.0 + pretrained_hf param
+  REVISION_REFERENCE: 9d31b2ec4df6d8228f370ff20c8267ec6ba39383 # v2.7.0 + pretrained_hf param
 
 jobs:
   Tests:
@@ -71,53 +71,56 @@ jobs:
     - name: Prepare test data
       run: |
         source .env/bin/activate
-        cp tests/util_test.py tests/util_test_ref.py # TODO: remove line once new util_test is in a release
-        CURRENT_GIT_REF=`git rev-parse HEAD`
-        if [ -n "${{ inputs.manual_target_commit }}" ]; then
-          CURRENT_GIT_REF=${{ inputs.manual_target_commit }}
+        # TODO: remove line once new util_test is in a release
+        cp tests/util_test.py tests/util_test_ref.py
+        REVISION_TEST=`git rev-parse HEAD`
+        if [ -n "${{ inputs.manual_revision_test }}" ]; then
+          REVISION_TEST=${{ inputs.manual_revision_test }}
         fi
-        if [ -n "${{ inputs.manual_testing_commit }}" ]; then
-          REFERENCE_GIT_COMMIT=${{ inputs.manual_testing_commit }}
+        if [ -n "${{ inputs.manual_revision_reference }}" ]; then
+          REVISION_REFERENCE=${{ inputs.manual_revision_reference }}
         fi
-        git checkout $REFERENCE_GIT_COMMIT
+        git checkout $REVISION_REFERENCE
         mkdir -p tests/data
         rm -rf tests/data/*
+        # TODO switch to marker instead of name filter (-k inference_with_data -> -m regression_test)
+        # once marker is in a release
         python -m pytest \
           --quiet --co \
           --splitting-algorithm least_duration \
           --splits ${{ matrix.job_num }} \
           --group ${{ matrix.job }} \
+          -k inference_with_data \
           tests \
           | head -n -2 | grep -Po 'test_inference_with_data\[\K[^]]*(?=])' \
           > tests/data/models_gh_runner.txt
         python tests/util_test_ref.py --model_file $PWD/tests/data/models_gh_runner.txt
         mkdir -p tests/data_ref
         cp -r tests/data/* tests/data_ref
-        git reset --hard $CURRENT_GIT_REF
+        git reset --hard $REVISION_TEST
         rm -rf tests/data/*
         cp -r tests/data_ref/* tests/data
     - name: Unit tests
       run: |
         source .env/bin/activate
         cp .test_durations durations_1
-        cp .test_durations durations_2
-        rm .test_durations
+        mv .test_durations durations_2
         python -m pytest \
-          -x -v \
+          -x -s -v \
           --splitting-algorithm least_duration \
           --splits ${{ matrix.job_num }} \
           --group ${{ matrix.job }} \
           --store-durations \
           --durations-path durations_1 \
           --clean-durations \
-          -k "not inference_with_data" \
+          -m "not regression_test" \
           tests
         IS_GH_RUNNER=1 python -m pytest \
-          -x -v \
+          -x -s -v \
           --store-durations \
           --durations-path durations_2 \
           --clean-durations \
-          -k "inference_with_data" \
+          -m "regression_test" \
           tests
         jq -s -S 'add' durations_* > .test_durations
     - name: Collect pytest durations
@@ -144,8 +147,4 @@ jobs:
         jq -n -S \
           'reduce (inputs | to_entries[]) as {$key, $value} ({}; .[$key] += $value)' \
           artifacts/pytest_durations_*/.test_durations > .test_durations
-    - uses: actions/upload-artifact@v3
-      with:
-        name: pytest_durations
-        path: .test_durations
 
