empty stash pop returns 1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         if [ -n "${{ inputs.manual_revision_reference }}" ]; then
           REVISION_REFERENCE=${{ inputs.manual_revision_reference }}
         fi
-        python tests/util_test.py --model_list models_gh_runner.txt --git_revision $REVISION_REFERENCE
+        python tests/util_test.py --overwrite --model_list models_gh_runner.txt --git_revision $REVISION_REFERENCE
     - name: Unit tests
       run: |
         source .env/bin/activate
